cilium/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: svc-app
  name: svc-app
  namespace: app
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    id: app
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: svc-manager
  name: svc-manager
  namespace: app
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    id: manager
  type: ClusterIP
